--- a/HW_13/www/app/sass/Career_page/_career-page.scss
+++ b/HW_13/www/app/sass/Career_page/_career-page.scss
@@ -64,6 +64,7 @@
     display: -o-flex;
     display: flex;
     margin-top: 30px;
+    flex-flow: row wrap;
     justify-content: space-between;
     align-items: center;
   }
